# Scraper

./: .gitignore  DEVLOG.md  README.md  TECH_CATALOG.md  package.json  pyproject.toml
.github/workflows/: ci.yml
archive/reports/: enhanced_harvest_report.html  harvest_report.html
docs/: CHANGELOG.md  EPICS.md  HARVEST_RESULTS.md  HARVEST_SOURCES.md  JOURNEYS.md  LEGAL_GUARDRAILS.md  POLICY_TEMPLATE.yaml  SYSTEM_STATUS.md  TAURI.md  all-lessons.md  devlog.md  glossary.md  index.md  meeting-mode.md  quick-cards.md  roadmap.md  setup.md  syllabus.md
docs/.vitepress/: config.ts
docs/adapter/: index.md
docs/architecture/: GALLERY.md
docs/cheatsheets/: README.md  asr.md  cli.md  contracts.md  gateway_sse.md  guardrails.md  observability.md  prompts.md  rag.md  thresholds.md  tts_ssml.md
docs/concepts/: answer-balance.md  distractors.md  index.md  learn.md  scoring.md  uniqueness.md
docs/contracts/: S2S.md
docs/expert/: checklist.md  dashboard.md
docs/handbook/: start-here.md
docs/hub/: MEETING_MODE.md
harvest_output/: enhanced_harvest.db  harvest.db  harvest_stats_20250825_194813.json  harvest_stats_20250825_200956.json  harvest_stats_20250825_201044.json  harvest_stats_20250825_201140.json  harvest_stats_20250825_201229.json  harvest_stats_20250825_201326.json  local_ai_quiz.db  quiz_harvest_20250825_194813.csv  quiz_harvest_20250825_200956.csv  quiz_harvest_20250825_201044.csv  quiz_harvest_20250825_201140.csv  quiz_harvest_20250825_201229.csv  quiz_harvest_20250825_201326.csv
scripts/: validate_quiz_dir.py
tests/: test_simhash.py
(+94 files in other folders)
